[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/themes/default/texture_default.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/JetBrainsMono/JetBrainsMonoNerdFontCompleteM-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/FredokaOne/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/themes/default/logo_home.png" type="Texture" id=4]
[ext_resource path="res://home/home.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 60.0
expand_margin_right = 60.0

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=30]
size = 45
extra_spacing_top = -32
extra_spacing_bottom = -32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=31]
size = 29
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=37]
size = 29
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.603922, 0.388235, 0.721569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=28]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.211765, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 40.0
expand_margin_right = 40.0

[sub_resource type="DynamicFont" id=21]
size = 42
use_filter = true
extra_spacing_top = -5
extra_spacing_bottom = -5
extra_spacing_char = 10
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.721569, 0.835294, 0.301961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.396078, 0.458824, 0.164706, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.666667, 0.482353, 0.764706, 1 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.0470588 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 420.0
margin_top = 10.0
margin_right = -420.0
margin_bottom = -10.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
margin_right = 1080.0
margin_bottom = 1060.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/AspectRatioContainer"]
margin_left = 10.0
margin_right = 1070.0
margin_bottom = 1060.0
custom_constants/margin_bottom = 56

[node name="GlobalVBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer"]
margin_right = 1060.0
margin_bottom = 1004.0

[node name="Logo" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer"]
margin_right = 1060.0
margin_bottom = 589.0

[node name="Image" type="TextureRect" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo"]
margin_left = 230.0
margin_right = 830.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 500 )
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource( 4 )
expand = true

[node name="Tittle" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo"]
margin_left = 431.0
margin_top = 504.0
margin_right = 628.0
margin_bottom = 589.0
rect_min_size = Vector2( 160, 85 )
size_flags_horizontal = 6
size_flags_vertical = 1
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "PÁSSAROS"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Options" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer"]
margin_top = 593.0
margin_right = 1060.0
margin_bottom = 1004.0
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Panel" type="Panel" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options"]
margin_left = 220.0
margin_top = 93.0
margin_right = 840.0
margin_bottom = 285.0
rect_min_size = Vector2( 620, 192 )
size_flags_horizontal = 4
size_flags_vertical = 10
custom_styles/panel = SubResource( 27 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_left = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer"]
margin_left = 60.0
margin_right = 560.0
margin_bottom = 192.0
custom_constants/separation = 20

[node name="Easy" type="Button" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer"]
margin_top = 56.0
margin_right = 153.0
margin_bottom = 136.0
rect_min_size = Vector2( 150, 80 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.603922, 0.388235, 0.721569, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "Fácil"
__meta__ = {
"_editor_description_": ""
}

[node name="Stars" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy"]
anchor_top = 0.833333
anchor_right = 1.0
anchor_bottom = 1.83333
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="First" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy/Stars"]
margin_left = 24.0
margin_top = 39.0
margin_right = 51.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""

[node name="Second" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy/Stars"]
margin_left = 63.0
margin_top = 39.0
margin_right = 90.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Third" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy/Stars"]
margin_left = 102.0
margin_top = 39.0
margin_right = 129.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Medium" type="Button" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer"]
margin_left = 173.0
margin_top = 56.0
margin_right = 326.0
margin_bottom = 136.0
rect_min_size = Vector2( 150, 80 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.603922, 0.388235, 0.721569, 1 )
custom_fonts/font = SubResource( 31 )
custom_styles/hover = SubResource( 32 )
custom_styles/pressed = SubResource( 33 )
custom_styles/focus = SubResource( 34 )
custom_styles/disabled = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
enabled_focus_mode = 0
text = "Médio"
__meta__ = {
"_editor_description_": ""
}

[node name="Stars" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium"]
anchor_top = 0.833333
anchor_right = 1.0
anchor_bottom = 1.83333
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="First" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium/Stars"]
margin_left = 24.0
margin_top = 39.0
margin_right = 51.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""

[node name="Second" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium/Stars"]
margin_left = 63.0
margin_top = 39.0
margin_right = 90.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Third" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium/Stars"]
margin_left = 102.0
margin_top = 39.0
margin_right = 129.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Hard" type="Button" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer"]
margin_left = 346.0
margin_top = 56.0
margin_right = 500.0
margin_bottom = 136.0
rect_min_size = Vector2( 150, 80 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.603922, 0.388235, 0.721569, 1 )
custom_fonts/font = SubResource( 37 )
custom_styles/hover = SubResource( 38 )
custom_styles/pressed = SubResource( 39 )
custom_styles/focus = SubResource( 40 )
custom_styles/disabled = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
enabled_focus_mode = 0
text = "Difícil"
__meta__ = {
"_editor_description_": ""
}

[node name="Stars" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard"]
anchor_top = 0.833333
anchor_right = 1.0
anchor_bottom = 1.83333
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="First" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard/Stars"]
margin_left = 24.0
margin_top = 39.0
margin_right = 51.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""

[node name="Second" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard/Stars"]
margin_left = 63.0
margin_top = 39.0
margin_right = 90.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Third" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard/Stars"]
margin_left = 102.0
margin_top = 39.0
margin_right = 129.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.666667, 0.482353, 0.764706, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Tittle" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel"]
anchor_left = 0.314516
anchor_top = -0.171875
anchor_right = 0.685484
anchor_bottom = 0.182292
rect_min_size = Vector2( 180, 68 )
rect_pivot_offset = Vector2( 180, 60 )
size_flags_horizontal = 6
size_flags_vertical = 1
custom_colors/font_color = Color( 0.333333, 0.211765, 0.396078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "Selecione o nível"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Button" type="Button" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options"]
margin_left = 482.0
margin_top = 315.0
margin_right = 578.0
margin_bottom = 411.0
rect_min_size = Vector2( 96, 96 )
hint_tooltip = "Como Jogar"
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.721569, 0.835294, 0.301961, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
enabled_focus_mode = 0
text = ""
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard" to="." method="_on_Hard_pressed"]
